# My_Works

Lab2/Lab2Task3/: main.cpp
Lab3/Lab3Task2/: CMakeLists.txt
Lab5/Lab5Task2/: CMakeLists.txt
Lab8/Lab8Task3/: CMakeLists.txt
